@@ -1234,11 +1234,10 @@ options.general.checkModStatus.prompt=prompt
 options.general.checkModStatus.reload=automatically reload and notify user
 options.general.checkModStatus.silentReload=autoreload without notification
 options.general.checkModStatusUpon=Check for file change upon:
-options.general.checkModStatusUpon.focus=application focus
-options.general.checkModStatusUpon.all=application focus, visiting the buffer or saving any buffer
-options.general.checkModStatusUpon.operations=visiting the buffer or saving any buffer
-options.general.checkModStatusUpon.focusBuffer=visiting or saving the buffer
-options.general.checkModStatusUpon.none=saving the buffer
+options.general.checkModStatusUpon.focus=view focus (check all buffers)
+options.general.checkModStatusUpon.all=view focus or visiting the buffer
+options.general.checkModStatusUpon.visitBuffer=visiting the buffer
+options.general.checkModStatusUpon.none=none
 options.general.recentFiles=Recent files to remember:
 options.general.hypersearch.maxWarningResults=Max Hypersearch Results:
 options.general.sortRecent=Sort recent file list
